Fix webkit fill dark mode

--- a/src/assets/scss/tailwind.scss
+++ b/src/assets/scss/tailwind.scss
@@ -13,7 +13,17 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
-    -webkit-box-shadow: 0 0 0 30px var(--color-background) inset !important;
+    -webkit-box-shadow: 0 0 0 30px var(--color-background) inset;
+    -webkit-text-fill-color: #111111;
+}
+
+html[data-theme="dark"] {
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus, 
+    input:-webkit-autofill:active  {
+        -webkit-text-fill-color: white;
+    }
 }
 
 input {
